name:                yoctoparsec
version:             0.1.0.0
synopsis:            A truly tiny monadic parsing library
description:         A monadic parsing library making use of the free monad
                     transformer. All instances are provided by the FreeT monad.
homepage:            https://github.com/mniip/yoctoparsec
license:             MIT
license-file:        LICENSE
author:              mniip
maintainer:          mniip@mniip.com
copyright:           (C) 2016 mniip
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Yoctoparsec
  build-depends:       base >= 4.8 && < 4.9, free >= 4.0, mtl >= 2.0.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
